# hookline

./: .env.example  .gitignore  Makefile  README.md  claude-hookline-serve.service  claude-notify-serve.service  com.claude.hookline-serve.plist  com.claude.notify-serve.plist  hookline-projects.json  hookline.md  hooks.json  notify.md  notify.py  pyproject.toml  setup.sh  toggle.sh
hookline/: __init__.py  __main__.py  _log.py  _types.py  approval.py  buttons.py  cli.py  commands.py  config.py  debounce.py  formatting.py  migrate.py  proactive.py  project.py  relay.py  replies.py  scheduler.py  serve.py  session.py  state.py  tasks.py  telegram.py  threads.py  transcript.py
hookline/memory/: __init__.py  intents.py  knowledge.py  search.py  store.py
notify/: __init__.py  __main__.py  _log.py  _types.py  approval.py  buttons.py  config.py  debounce.py  formatting.py  project.py  replies.py  serve.py  session.py  state.py  tasks.py  telegram.py  threads.py  transcript.py
tests/: conftest.py  test_commands.py  test_config.py  test_debounce.py  test_formatting.py  test_main.py  test_memory.py  test_proactive.py  test_relay.py  test_session.py  test_state.py  test_transcript.py
