[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hookline"
version = "4.0.0"
description = "Claude Code ↔ Telegram relay"
requires-python = ">=3.10"
license = {text = "MIT"}

# Zero runtime dependencies for the hook path

[project.scripts]
hookline = "hookline.cli:cli_main"

[project.optional-dependencies]
memory = ["sqlite-vec>=0.1"]
dev = ["pytest>=8", "ruff>=0.4", "pyright>=1.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hookline*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
